💄 フッターとヘッターをかっこいい見た目にした

--- a/styles/general.sass
+++ b/styles/general.sass
@@ -1,1 +1,33 @@
 
+header
+  height: 300px
+  padding: 20px
+  background: linear-gradient(305deg, #dbfff3, transparent)
+  display: flex
+  flex-direction: column
+  justify-content: space-between
+  h1
+    width: 50%
+    font-size: 40px
+    text-transform: uppercase
+  .topNav
+    display: flex
+    justify-content: space-between
+    align-content: center
+
+    ul
+      display: flex
+      list-style: none
+      text-decoration: none
+      gap: 15px
+      li
+        list-style: none
+        font-weight: 600
+        front-size: 16px
+
+footer
+  background-color: #333
+  color: #fff
+  padding: 10px
+  text-align: center
+  text-align: center
