--- a/styles/general.sass
+++ b/styles/general.sass
@@ -31,3 +31,28 @@ footer
   padding: 10px
   text-align: center
   text-align: center
+
+main
+  width: 100%
+  max-width: 1250px
+  margin: auto
+  padding: 100px 30px
+  min-height: 550px
+
+.home_body
+  display: flex
+  flex-direction: column
+  gap: 50px
+  .image
+    width: 40%
+  .card
+    display: flex
+    flex-direction: row-reverse
+    gap: 30px
+    justify-content: center
+    align-content: center
+    align-items: center
+    &:nth-child(odd)
+      direction: rtl
+    .content
+      width: 50%
