💄 ヘッダーのレイアウト調整

--- a/styles/general.sass
+++ b/styles/general.sass
@@ -1,3 +1,5 @@
+ul
+  list-style: none
 
 header
   height: 300px
@@ -6,6 +8,13 @@ header
   display: flex
   flex-direction: column
   justify-content: space-between
+  >div
+    width: 100%
+    max-width: 1250px
+    margin: auto
+    display: flex
+    flex-direction: column
+    justify-content: space-between
   h1
     width: 50%
     font-size: 40px
