💄 aboutページのレイアウト変更対応

--- a/styles/general.sass
+++ b/styles/general.sass
@@ -45,7 +45,7 @@ main
   width: 100%
   max-width: 1250px
   margin: auto
-  padding: 100px 30px
+  padding: 80px 30px
   min-height: 550px
 
 .home_body
@@ -65,3 +65,7 @@ main
       direction: rtl
     .content
       width: 50%
+
+.about_ul_list
+  display: flex
+  flex-direction: column
