💄 イベントページのレイアウト調整

--- a/styles/general.sass
+++ b/styles/general.sass
@@ -69,3 +69,19 @@ main
 .about_ul_list
   display: flex
   flex-direction: column
+
+.events_page
+  display: flex
+  flex-direction: row
+  gap: 20px
+  .card
+    position: relative
+    h2
+      position: absolute
+      width: 100%
+      top: 50%
+      text-align: center
+      font-size: 50px
+      color: white
+      text-transform: uppercase
+      text-shadow: 1px 1px 20px black
