♻️ カテゴリーページのコンポーネント化

--- a/styles/general.sass
+++ b/styles/general.sass
@@ -85,3 +85,17 @@ main
       color: white
       text-transform: uppercase
       text-shadow: 1px 1px 20px black
+
+.category_events
+  width: 100%
+  .content
+    display: flex
+    flex-direction: row
+    flex-wrap: wrap
+    width: 100%
+    gap: 30px
+    justify-content: start
+    .card
+      display: flex
+      flex-direction: column
+      width: 30%
