--- a/styles/general.sass
+++ b/styles/general.sass
@@ -15,7 +15,7 @@ header
     display: flex
     flex-direction: column
     justify-content: space-between
-  h1
+  .title
     width: 50%
     font-size: 40px
     text-transform: uppercase
