--- a/styles/general.sass
+++ b/styles/general.sass
@@ -94,8 +94,41 @@ main
     flex-wrap: wrap
     width: 100%
     gap: 30px
-    justify-content: start
+    justify-content: flex-start
     .card
       display: flex
       flex-direction: column
       width: 30%
+
+.event_single_page
+  .email_registration
+    margin-top: 25px
+    label
+      display: flex
+      margin-bottom: 15px
+      font-size: 18px
+      text-transform: uppercase
+    // flex-direction: column
+      gap: 10px
+    input
+      height: 40px
+      min-width: 350px
+      box-shadow: none
+      border-radius: 5px
+      border-image: none
+      border: 1px solid #ccc
+      font-size: 16px
+    button
+      border-radius: 5px
+      height: 40px
+      min-width: 150px
+      border: 1px solid #5f5a5a
+      text-transform: uppercase
+      margin-left: 10px
+      font-size: 16px
+      font-weight: 600
+      background: #dcfff3
+      cursor: pointer
+      &:hover
+        color: #dcfff3
+        background: #333
